src/test/pass/variant_generic_calls.lly
enum class Option[A] {
    Some(A),
    None
}

define f[A](first: Option[A], second: Option[A]) {

}

f(None, None)
f(Some(10), Some(10))
f(Some("10"), None)
f(None, Some(10))
